# Installm

./: .gitignore  Dockerfile  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml
src/installm/: __init__.py  auth.py  cli.py  config.py  download.py
src/installm/backends/: __init__.py  base.py  llamacpp.py  ollama.py  transformers.py  vllm.py
src/installm/gateway/: __init__.py  app.py  middleware.py  schemas.py  streaming.py  structured.py  tools.py
src/installm/gateway/routes/: chat.py  embeddings.py  models.py  responses.py
tests/: conftest.py  test_alias.py  test_auth.py  test_cli.py  test_config.py  test_download.py  test_e2e_qwen.py  test_hf_token.py  test_integration_live.py
tests/test_backends/: test_llamacpp.py  test_ollama.py  test_transformers.py  test_vllm.py
tests/test_gateway/: test_chat.py  test_embeddings.py  test_health.py  test_models.py  test_responses.py  test_tools_and_structured.py
