[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "installm"
version = "0.2.0"
description = "One-command deployment of OpenAI-compatible APIs for open-source LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SAAD Muhammad Abdur Rahman"}]
keywords = ["llm", "openai", "api", "inference", "transformers", "vllm", "ollama", "llama-cpp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "huggingface-hub>=0.23",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "sse-starlette>=1.6",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/Alpha-30-creator/Installm"
Repository = "https://github.com/Alpha-30-creator/Installm"
Issues = "https://github.com/Alpha-30-creator/Installm/issues"

[project.optional-dependencies]
transformers = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.30",
    "sentencepiece>=0.1.99",
]
vllm = [
    "vllm>=0.4",
]
llamacpp = [
    "llama-cpp-python>=0.2",
]
ollama = []
all = [
    "installm[transformers,vllm,llamacpp]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
]

[project.scripts]
installm = "installm.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
